// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorDialog should render hidden dialog 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  dialogAs={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "ModalDialog",
      "render": [Function],
    }
  }
  enforceFocus={true}
  keyboard={true}
  onHide={[Function]}
  restoreFocus={true}
  show={false}
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle>
      Error
    </ModalTitle>
  </ModalHeader>
  <ModalBody />
  <ModalFooter>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="primary"
    >
      Close
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`ErrorDialog should render visible dialog with one message 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  dialogAs={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "ModalDialog",
      "render": [Function],
    }
  }
  enforceFocus={true}
  keyboard={true}
  onHide={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle>
      Error
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p
      className="core-error-dialog-message"
      key="Oops. An error occurred."
    >
      Oops. An error occurred.
    </p>
  </ModalBody>
  <ModalFooter>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="primary"
    >
      Close
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`ErrorDialog should render visible dialog with two messages 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  dialogAs={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "ModalDialog",
      "render": [Function],
    }
  }
  enforceFocus={true}
  keyboard={true}
  onHide={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle>
      Error
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p
      className="core-error-dialog-message"
      key="Oops. An error occurred."
    >
      Oops. An error occurred.
    </p>
    <p
      className="core-error-dialog-message"
      key="Another error"
    >
      Another error
    </p>
  </ModalBody>
  <ModalFooter>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="primary"
    >
      Close
    </Button>
  </ModalFooter>
</Modal>
`;
